# comppyss

./: README.md  environment.yml  setup.cfg  setup.py
comppyss/: __init__.py  comppass.py  comppyss.py
comppyss/tests/: test_compyss.py  test_prey_stats.py
