[metadata]
name = comppyss
version = 0.0.2
author = Andrew Sung
author_email = aysung300@gmail.com
description = Python implementation of the CompPASS algorithm for scoring AE-MS experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AYSung/comppyss/
project_urls =
    Bug Tracker = https://github.com/AYSung/comppyss/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires:
    pandas>=1.4.0
    numpy>=1.22.2

[options]
package_dir =
    = comppyss
packages = find:
python_requires = >=3.10

[options.packages.find]
where = comppyss